study-k8s/kube/tut/ingress/ingress-controller-basic.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: simple-ingress
spec:
   backend:
          serviceName: hello
          servicePort: 8080
